# WinAuth

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
scripts/: init.cmd  run-clang-format.cmd
